--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,49 @@
 
 All notable changes to this project will be documented in this file. The format is based on [Keep a Changelog][Keep a Changelog].
 
+## [4.2.0] - 2023-06-13
+
+### Added
+
+- **COMPILER** new wrappers for mpicc++ and mpif90 (privatization)
+- **SESSIONS** adding sessions support
+- **OMP** 
+    - Added fibers to OpenMP tasks
+    - Added interoperation between MPC-MPI / MPC-OpenMP(tasks) for the « loss of thread issue »
+    - Refactored OpenMP task runtime (memory management, dependencies, tasks priorities)
+- **MPI** 
+    - adding message queue
+    - new pairwise alltoall algorithm
+- **CONFIG** add intracomm collective communications config switch
+
+### Changed
+
+- **UPGRADE** upgrade to autopriv@0.8.0 then to autopriv@0.9.1
+- **INFRASTRUCTURE** moving communicator attributes to lowcomm
+- **PMIX** detection and execution improvements
+
+### Fixed
+
+- fix ompt
+- fix allocation on tree initialization
+- fix mpirun return code
+- fix --without-rocm
+- fix nbc thread segfault
+- fix --disable-mpc-alloc
+- fix long arguments
+- Clean of the RDMA
+- Removal of RDMA control messages
+- Fixes on communicator pruning in thread-based
+- fix shm
+- fix MPI_PRIV
+- free in topological communicators
+- elements scattering in topological scatter
+- --autokilll
+- lib dependencies path
+- output color
+- portals and PMIX
+- MPI_STATUS
+
 ## [4.1.0] - 2021-08-03
 
 - Active Message engine based on libffi
